k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bug-report-portal-app
  namespace: bug-report-portal-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bug-report-portal-app
  template:
    metadata:
      labels:
        app: bug-report-portal-app
    spec:
      containers:
        - name: app
          image: bugreportportal
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 20
      volumes:
        - name: uploads
          emptyDir: {}
