k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bug-report-portal-service
  namespace: bug-report-portal-dev
spec:
  type: NodePort
  selector:
    app: bug-report-portal-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30000
