k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bug-report-portal-ingress
  namespace: bug-report-portal-dev
spec:
  ingressClassName: nginx
  rules:
    - host: bug-report.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bug-report-portal-service
                port:
                  number: 3000
